@@ -141,19 +141,14 @@ results *run_command(SQLHDBC conn, buffer *buf)
 
 	// Catalog commands
 	else if(!strncmp(l->chunks[0] + 1, "cat", 3)) {
-		res = get_tables(conn, "%", 0, 0);
+		res = get_tables(conn, SQL_ALL_CATALOGS, "", "");
 	} else if(!strncmp(l->chunks[0] + 1, "sch", 3)) {
-		res = get_tables(conn, "%", "%", 0);
+		res = db_list_schemas(conn, l->nchunks > 1 ? l->chunks[1] : 0);
 	} else if(!strncmp(l->chunks[0] + 1, "tab", 3)) {
-		res = get_tables(conn,
-				 l->nchunks > 1 ? l->chunks[1] : 0,
-				 l->nchunks > 2 ? l->chunks[2] : 0,
-				 l->nchunks > 3 ? l->chunks[3] : 0);
+		res = db_list_tables(conn, l->nchunks > 1 ? l->chunks[1] : 0);
 	} else if(!strncmp(l->chunks[0] + 1, "col", 3)) {
-		res = get_columns(conn,
-				 l->nchunks > 1 ? l->chunks[1] : 0,
-				 l->nchunks > 2 ? l->chunks[2] : 0,
-				 l->nchunks > 3 ? l->chunks[3] : 0);
+		if(l->nchunks > 1) res = db_list_columns(conn, l->chunks[1]);
+		else printf(_("Syntax: columns <table>\n"));
 	}
 
 	// Other commands
