@@ -9,6 +9,7 @@
 	Multiple newline formats.
 	Readable control character rendering.
 	Lots more information in /info.
+	Improved catalog functions.
 
 0.3a
 	Further UI tweaks.
